<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_title">Device Detection</string>
    <string name="app_name">Haptic Feedback</string>
    <string name="refreshing">Searching...</string>
    <string name="action_settings">actionSettings</string>
    <string name="pdm_descr">The pressure distribution map will give you a responsive feedback for all sensor inputs based on your touch.</string>
    <string name="about">Software and hardware designed and developed by Ben Kazemi*</string>
    <string name="demo_selector">Haptic Feedback Demos</string>
    <string name="pde_button_map">Pressure Distribution Map</string>
    <string name="camera_button">Take a photo</string>
    <string name="camera_descr">Open the camera app by pushing the top right sensor, when in a landscape orientation, with the top pointing to the left.</string>
    <string name="example_text1">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since the 1500s,
        when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting,
        remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software
        like Aldus PageMaker including versions of Lorem Ipsum. "On the other hand, we denounce with righteous indignation and dislike men who are so beguiled and demoralized by the charms of pleasure
        of the moment, so blinded by desire, that they cannot foresee the pain and trouble that are bound to ensue; and equal blame belongs to those who fail in their duty through weakness of will,
        which is the same as saying through shrinking from toil and pain. These cases are perfectly simple and easy to distinguish. In a free hour, when our power of choice is untrammelled and when
        nothing prevents our being able to do what we like best, every pleasure is to be welcomed and every pain avoided. But in certain circumstances and owing to the claims of duty or the obligations
        of business it will frequently occur that pleasures have to be repudiated and annoyances accepted. The wise man therefore always holds in these matters to this principle of selection: he rejects
        pleasures to secure other greater pleasures, or else he endures pains to avoid worse pains."
        "But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system, and expound the actual teachings of the
        great explorer of the truth, the master-builder of human happiness. No one rejects, dislikes, or avoids pleasure itself, because it is pleasure, but because those who do not know how to pursue
        pleasure rationally encounter consequences that are extremely painful. Nor again is there anyone who loves or pursues or desires to obtain pain of itself, because it is pain, but because occasionally
        circumstances occur in which toil and pain can procure him some great pleasure. To take a trivial example, which of us ever undertakes laborious physical exercise, except to obtain some advantage from it?
        But who has any right to find fault with a man who chooses to enjoy a pleasure that has no annoying consequences, or one who avoids a pain that produces no resultant pleasure?"Eros soluta adversarium qui
        ea. Nec in vocent disputationi, in his iusto recusabo facilisis. Sed tacimates salutandi ne, qui illud laoreet conclusionemque ei. Ad vitae vituperatoribus quo, ut eum vivendo accusata. Eos cu case
        lobortis.</string>

    <string name="example_text2">Dicam voluptua accusata eos ex. Everti insolens eam ex, te vidisse dissentias per. Qui dictas nostrud concludaturque ei. Ad per nemore integre, ut nulla altera persequeris per. Id quo quaeque reformidans, sea case intellegebat an.

    Ne eos ferri falli theophrastus. Ex mea summo inciderint. Has in ludus postea fuisset, est movet definitionem te. Ut sit principes accommodare, iuvaret quaeque te ius. Duis evertitur definiebas et vim, id qui solet regione sadipscing.

    Quo eius ullum ut, mel id mutat denique. At iudico bonorum quo, at duo viris meliore volumus, qui at case duis mandamus. Mei tamquam oblique id, ei paulo expetenda ius, quo ex soleat eloquentiam. Iisque virtute eos id, vel elit vidisse ad.

    Meis hendrerit pri an. Eos mutat soluta voluptatibus ea, eam ne tamquam mediocrem definitiones, magna dicat ad vel. No vel stet convenire, eu quo accusam dignissim vulputate, simul latine pri ea. Vix ad lorem altera persecuti.

    Modo nemore tamquam at mel, per tollit deleniti luptatum an. Qui velit mucius referrentur eu, est te minim ceteros quaestio, at vis labore oportere. Eos ne eius veritus tractatos, qui te qualisque iracundia. Tollit luptatum sadipscing at vis, sed eu movet euismod maluisset. Nam an putent alienum. At velit offendit vix, erat oratio forensibus eos eu, diceret prodesset theophrastus ne mel.

    Aperiam iuvaret persequeris est in, usu at feugiat tibique, utamur efficiendi quaerendum in ius. Ne vide adipisci indoctum usu. Omnium propriae incorrupte eos et, debitis adolescens vim at, vim tibique praesent et. Cu unum tollit mei, sanctus feugait repudiare no duo. In sed percipit legendos, quo ne alia scripta singulis.

    An cum causae bonorum habemus, molestie corrumpit eam id. At eum putent quidam vivendum, cu mel maiorum ocurreret, te vim dolores molestie iudicabit. No diam salutatus sententiae nec, has dignissim conclusionemque id. Veri delenit contentiones per in, inani ubique sed an, esse veri pro et.

    Mel an imperdiet deseruisse, sea eu diam nostrum molestie. Nam ei unum probatus assueverit, no verear oblique fabellas nam. Pro ad illud recteque. Essent forensibus id vim, an facilis gubergren vim, nihil vitae reprehendunt vim in. Vide ludus vim no, vel ea munere tritani. Est bonorum meliore mediocritatem te, id magna oportere sea, nibh molestiae quo ut.

    Cum iuvaret propriae ut, an alii delicatissimi eam. Ne vix omittam qualisque reprehendunt, iusto regione philosophia an mea. Ei omnes eirmod intellegat ius. Eos altera mucius delicata eu, paulo ignota dicunt cu cum. Usu ea mollis omittam, ad aperiam labitur duo.

    Est paulo delicatissimi necessitatibus no, sea eu volumus tibique. Quot definiebas sea ea, delicata similique neglegentur vim at. Duo tollit prompta theophrastus et, eum nominati rationibus te. At quod wisi aliquip vim, ut vel doctus intellegat. Vel eius tempor electram ne. Duo principes assueverit ne. Soleat volutpat mei ad, est mutat error euismod no.

    Blandit salutandi usu ex. Usu ut elitr feugait reprimique, sed facete appetere ex. Nihil congue legere sea te. Et vis aperiam oblique, vim ex bonorum vituperatoribus, id vim latine percipit. His vero animal no.

    Ne brute dicta eos, ut debet ubique vis, homero partiendo corrumpit sea at. Ea esse salutandi efficiantur pri, quo eu fugit graeci comprehensam. Commune ponderum sea no, sea an maiorum percipit. Quo no nonumes offendit. Ea fierent inimicus urbanitas quo. Cu etiam fabulas vis, mea esse omittantur te, at intellegat dissentiunt accommodare pro.

    Pertinacia deseruisse ius in, ex vis antiopam ocurreret. Alia modus corrumpit vim te, mel te tantas appareat mnesarchum. Vis impedit deleniti te, has assum libris salutatus no, solet dissentiet his in. At splendide moderatius definiebas nam, his id autem scripserit. Sea ex suas feugiat sententiae, mea pericula rationibus reformidans ea, utroque repudiandae at quo. Verear labitur intellegebat nec ea.

    Qui quodsi argumentum voluptatibus ea, cum vidit iusto deterruisset ea. Mel ei mundi ornatus liberavisse. Cu labore inermis est, nec velit mazim invenire ne. Eum ut facilisi imperdiet, per eius ancillae ad. Mutat eirmod albucius cu eos, congue dolore nec ne, te veri consul ius. Eos putant quaestio id.

    Vim animal probatus recusabo ei. Odio splendide no mea, ad mollis aliquam eruditi duo. Ludus option ius cu. His lobortis petentium eu. Dicta audire oporteat vim ad.

    Mei an alia persius, id quis debitis qui. Et ius munere detracto honestatis. In omnis tibique adipisci mel, dicit zril sed no. Est persecuti sadipscing ea. Mea at quot libris tamquam.

    In nec posse saperet tacimates. Postea maiorum docendi te mel, duo et cibo accusam iracundia. Debitis intellegam vel ad, brute saperet ea per. Idque repudiare his ne. Eos ut tibique adolescens, at labitur explicari conceptam his. Pro eu unum veri.

    Et munere molestie principes est, id vis tritani prodesset consetetur. Ne qui volutpat euripidis temporibus, at pri tantas noluisse instructior, cu falli quando antiopam duo. Salutandi disputando ea eos. Id habemus periculis posidonium eos, ne cum harum percipit. Cum libris adversarium delicatissimi ad, assum tollit eam in. Id pri amet neglegentur definitiones.

    Te affert diceret delectus eos. Mei in zril nominavi, id quo dicunt causae singulis. Et eam utinam quidam malorum, qui iusto nominavi eu. An brute quaestio delicata his, an quo scriptorem dissentiet, vix liber errem ut.

    Ea vel quaestio explicari, sea no probo modus tamquam. An erat vocibus sed, mei an verear epicuri, molestie principes eam ea. Ex mea dicat paulo equidem, no tantas aeterno tritani per. Sit et purto vocent, wisi nobis usu ad, cu delicata reprehendunt sed. Ea cum legere semper corrumpit, in atqui tincidunt vituperata sed, cum feugiat aliquando id.

    No elit modus iriure nec. Tibique voluptatum has ne. At mel iisque oblique voluptua, mazim quando ex vel. Vix id pertinax erroribus consectetuer, diam tamquam cu eam.

    Ei mei sumo placerat adipiscing, meliore conclusionemque sed ne. An vitae quaestio duo, est in nisl harum iusto. Dicat iudico doming mel te, omnes insolens mel no. Et per vide lorem.

    Pri no percipitur honestatis, erat scriptorem ne nam. Vim aeterno philosophia an.</string>
    <string name="SynthText">Synthesizer</string>

</resources>
